# reqstool-client

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  x.adoc
.github/: dependabot.yml
.github/workflows/: build.yml  check_release.yml  docker-build.yml  lint.yml  linting.yml  linting_java.yml  publish_development.yml  publish_gh_pages.yml  publish_maven.yml  publish_pages.yml  publish_production.yml  publish_pypi_prod.yml  publish_pypi_test.yml  release_prod.yml  release_test.yml
docs/: antora-playbook.yml  antora.yml
docs/examples/requirements/: requirements_external.yml  requirements_microservice.yml  requirements_system.yml  software_verification_cases.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/: requirements_external.yml
docs/modules/ROOT/pages/: background.adoc  data.adoc  file_and_directory_set.adoc  how_it_works.adoc  index.adoc  installation.adoc  overview.adoc  quickstart.adoc  terminology.adoc  usage.adoc
docs/modules/ROOT/pages/yml/: annotations.adoc  manual_verification_results.adoc  reqstool_config.adoc  requirements_annotations.adoc  requirements_external.adoc  requirements_microservice.adoc  requirements_system.adoc  software_verification_cases.adoc  svcs_annotations.adoc
docs/modules/ROOT/pages/yml_examples/: annotations.yml  reqstool_config.yml  requirements_annotations.yml  requirements_microservice.yml  software_verification_cases.yml  svcs_annotations.yml
docs/modules/ROOT/partials/: C4_Component.puml  C4_Sequence.puml
docs/modules/examples/partials/requirements/: manual_verification_results.yml  reqstool_config.yml  requirements-config.yml  requirements_external.yml  requirements_microservice.yml  requirements_system.yml  software_verification_cases.yml
docs/reqstool/: manual_verification_results.yml  manual_verification_results_data_structure.yml  manual_verification_results_for_results.yml  reqstool_config.yml  requirements.yml  requirements_data_existence.yml  requirements_data_filters.yml  requirements_data_structure.yml  requirements_data_validation.yml  requirements_for_results.yml  software_verification_cases.yml  software_verification_cases_data_existence.yml  software_verification_cases_data_filters.yml  software_verification_cases_data_structure.yml  software_verification_cases_data_validation.yml  software_verification_cases_for_results.yml
src/reqstool/: command.py
src/reqstool/commands/: exit_codes.py
src/reqstool/commands/generate_json/: generate_json.py
src/reqstool/commands/report/: report.py
src/reqstool/commands/report/criterias/: group_and_sort.py  group_by.py  sort_by.py
src/reqstool/commands/report/templates/: annotation_impls.j2  annotation_tests.j2  mvrs.j2  report.j2  req_references.j2  requirements.j2  svcs.j2  total_statistics.j2
src/reqstool/commands/status/: statistics_container.py  statistics_generator.py  status.py
src/reqstool/common/: jinja2.py  utils.py  validator_error_holder.py
src/reqstool/common/dataclasses/: lifecycle.py  maven_version.py  urn_id.py
src/reqstool/common/validators/: lifecycle_validator.py  semantic_validator.py  syntax_validator.py
src/reqstool/expression_languages/: generic_el.py  requirements_el.py  svcs_el.py
src/reqstool/filters/: id_filters.py  requirements_filters.py  svcs_filters.py
src/reqstool/location_resolver/: location_resolver.py
src/reqstool/locations/: git_location.py  local_location.py  location.py  maven_location.py  pypi_location.py
src/reqstool/model_generators/: annotations_model_generator.py  combined_indexed_dataset_generator.py  combined_raw_datasets_generator.py  mvrs_model_generator.py  requirements_model_generator.py  svcs_model_generator.py  testdata_model_generator.py
src/reqstool/models/: annotations.py  combined_indexed_dataset.py  implementations.py  imports.py  mvrs.py  raw_datasets.py  requirements.py  svcs.py  test_data.py
src/reqstool/reqstool_config/: reqstool_config.py
src/reqstool/reqstool_index/: reqstool_index.py
src/reqstool/requirements_config/: requirements_config.py
src/reqstool/requirements_indata/: requirements_indata.py  requirements_indata_paths.py
src/reqstool/requirements_indata/java/: java_maven_requirements_indata_paths.py
src/reqstool/requirements_indata/python/: python_requirements_indata_paths.py
src/reqstool/resources/schemas/v1/: annotations.schema.json  common.schema.json  manual_verification_results.schema.json  reqstool_config.schema.json  reqstool_index.schema.json  requirements-config.schema.json  requirements.schema.json  software_verification_cases.schema.json
tests/integration/reqstool/model_generators/: test_included_models_generator.py
tests/resources/: reqstool_index.yml
tests/unit/: conftest.py
tests/unit/reqstool/commands/generate_json/: test_generate_json.py
tests/unit/reqstool/commands/report/: test_report.py
tests/unit/reqstool/commands/status/: test_statistics_container.py  test_statistics_generator.py  test_status.py
tests/unit/reqstool/common/: test_locations.py  test_utils.py
tests/unit/reqstool/expression_languages/: test_requirements_el.py  test_svcs_el.py
tests/unit/reqstool/filters/: test_requirements_filters.py  test_software_verification_cases_filters.py
tests/unit/reqstool/locations/: test_git_location.py  test_local_location.py  test_maven_location.py  test_pypi_location.py
tests/unit/reqstool/model_generators/: test_annotations_model_generator.py  test_combined_indexed_dataset_generator.py  test_combined_raw_datasets_generator.py  test_mvrs_model_generator.py  test_requirements_model_generator.py  test_svcs_model_generator.py  test_testdata_model_generator.py
tests/unit/reqstool/models/: test_annotations.py  test_implementations.py  test_imports.py  test_mvrs.py  test_requirements.py  test_svcs.py
tests/unit/reqstool/reqstool_config/: test_reqstool_config.py
tests/unit/reqstool/reqstool_index/: test_reqstool_index.py
tests/unit/reqstool/requirements_config/: test_requirements_config.py
tests/unit/reqstool/requirements_indata/: test_requirements_indata_paths.py
(+95 files in other folders)
