[build-system]
requires = ["hatchling", "hatch-vcs", "build", "twine"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_classes = ["!TestDataModelGenerator", "!TestStatisticsItem"]
addopts = [
    "-rsxX",
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
    '-m not slow and not integration',
]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
markers = [
    "flaky: tests that can randomly fail through no change to the code",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests that require external resources",
]

[project]
name = "reqstool"
dynamic = ["version"]
authors = [{ name = "LFV", email = "info@lfv.se" }]
description = "A tool for managing requirements with related tests and test results."
readme = "README.md"

homepage = "https://github.com/Luftfartsverket/reqstool-client"
repository = "https://github.com/Luftfartsverket/reqstool-client"
documentation = "https://github.com/Luftfartsverket/reqstool-client"

urls.Source = 'https://github.com/Luftfartsverket/reqstool-client'

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]

requires-python = ">=3.10"

dependencies = [
    "colorama==0.4.6",
    "distlib==0.3.9",
    "Jinja2==3.1.6",
    "jsonpickle==4.0.5",
    "jsonschema[format-nongpl]==4.23.0",
    "lark==1.2.2",
    "maven-artifact==0.3.5",
    "pygit2==1.17.0",
    "referencing==0.36.2",
    "requests-file==2.1.0",
    "ruamel.yaml==0.18.10",
    "tabulate==0.9.0",
    "xmldict==0.4.1",
    "reqstool-python-decorators==0.0.7",
    "packaging==24.2",
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
]

[project.scripts]
reqstool = "reqstool.command:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.reqstool]
dependencies = ["reqstool-python-hatch-plugin==0.1.4"]
sources = ["src", "tests"]
test_results = "build/junit.xml"
dataset_directory = "docs/reqstool"
output_directory = "build/reqstool"

[tool.hatch.envs.dev]
dependencies = [
    "pytest==8.3.5",
    "pytest-sugar==1.0.0",
    "pytest-cov==6.1.1",
    "black==25.1.0",
    "flake8==7.2.0",
    "flake8-pyproject==1.2.3",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
ignore = ["W503"]
addopts = [
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
    #    '-m not slow or not integration',
]
pythonpath = [".", "src", "tests"]
max-line-length = 125
# exclude = tests/*
max-complexity = 10
